# Server/src/routes/usuariosRoutes.ts
@@ -18,6 +18,7 @@ this.router.put('/actualizarUsuario/:id',usuariosController.actualizarUsuario);
 this.router.delete('/eliminarUsuario/:id',usuariosController.eliminarUsuario);
 this.router.get('/listarUsuariosRol/:id',usuariosController.listarUsuariosRol);
 this.router.post('/ValidarUsuario/',usuariosController.ValidarUsuario);
+this.router.get('/obtenerUsuarioCorreo/:correo',usuariosController.obtenerUsuarioCorreo);
 }
 }
 const usuariosRoutes= new UsuariosRoutes();
